update page, chapter
