# docs/swagger.json
@@ -168,7 +168,7 @@
                 }
             }
         },
-        "/books": {
+        "/book": {
             "get": {
                 "description": "Retrieve all books available in the system",
                 "produces": [
@@ -192,7 +192,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/books": {
             "post": {
                 "description": "Create a new book associated with a user",
                 "consumes": [
@@ -1122,12 +1124,20 @@
                 "user_id"
             ],
             "properties": {
+                "address": {
+                    "description": "Địa chỉ giao hàng",
+                    "type": "string"
+                },
                 "order_details": {
                     "description": "Danh sách sách trong đơn",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/request.OrderDetailRequest"
                     }
+                },
+                "phone": {
+                    "description": "Số điện thoại",
+                    "type": "string"
                 },
                 "user_id": {
                     "description": "Người đặt hàng",
